# NodeEditor

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
NodeEditor/: CMakeLists.txt  GuiMain.cpp
NodeEditor/bk/: CgalConfig.h  DBGGlobal.cpp  DBGGlobal.h  Graph.cpp  ImPlotDrawer.cpp  ImPlotDrawer.h  NECommon.cpp  Node.cpp  Nodes.cpp  Pins.cpp  PolygonStructure.cpp  PolygonStructure.h  SLC2Polygons  SLCLoder  SkeletonAndOffsetWithHoles.cpp  SkeletonAndOffsetWithHoles.h  displayPolygons  drawSkeleton.cpp  drawSkeleton.h
NodeEditor/imgui/: CMakeLists.txt
NodeEditor/imgui/src/: imgui_demo.cpp  implot.h
NodeEditor/include/NodeEditor/: AlgDBG.h  Graph.h  IdMap.h  ImPlotDrawer.h  NECommon.h  Node.h  Nodes.h  Pins.h  SLC2Polygons  SLCLoder  displayPolygons  drawSkeleton.h  node_editor.h  pin.h
NodeEditor/include/imnodes/: imnodes_internal.h
NodeEditor/sdl2/: WhatsNew.txt
NodeEditor/sdl2/docs/: CONTRIBUTING.md  README-android.md  README-emscripten.md  README-hg.md  README-windows.md
NodeEditor/src/: AlgDBG.cpp  Edge.cpp  Editor.cpp  Graph.cpp  ImPlotDrawer.cpp  Node.cpp  Nodes.cpp  Pins.cpp  pin.cpp
Nodes/: CMakeLists.txt
Nodes/include/Nodes/: Edge.h  Graph.h  Node.h  Nodes.h  Pins.h  nodes.h  pin.h
Nodes/include/Nodes/core/: Descriptor.h  Graph.h  INode.h  IObject.h  defNode.h
Nodes/include/Nodes/funcs/: LiterialConverter.h
Nodes/include/Nodes/types/: NumericObject.h  StringObject.h
Nodes/include/Nodes/utils/: api.h  log.h  safe_at.h  safe_dynamic_cast.h  source_location.h  to_string.h  vec.h
Nodes/src/: Edge.cpp  pin.cpp
Nodes/src/core/: Descriptor.cpp  Graph.cpp  INode.cpp  IObject.cpp
Nodes/src/nodes/num/: MakeNumeric.cpp
UI/: CMakeLists.txt  GuiMain.cpp
UI/include/UI/: editor.h
UI/include/imnodes/: imnodes.h
UI/src/: editor.cpp  imnodes.cpp
